--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
 		integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap:100,200,300,400,500,600,700" rel="stylesheet">
 	<link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
 	<title>Anna Janiak</title>
 </head>
@@ -30,16 +30,31 @@
 					<a class="active" href="tv.html">TV</a>
 				</li>
 				<li>
-                <a class="active" href="about.html">About</a>
+					<a class="active" href="about.html">About</a>
 				</li>
 			</ul>
 		</nav>
 	</header>
-	<section>
-
-	</section>
+	<div class="container-fluid">
+		<div class="row fullname">
+			<div class="col">
+            <h1>Anna Janiak</h1>
+			</div>
+		</div>
+        <div class="row jobtitile">
+			<div class="col">
+            <h1>FULL STACK DEVELOPER</h1>
+			</div>
+		</div>
+	</div>
+    <div id="background-image">
+    </div>
 	<footer>
-
+<ul class="social-networks">
+<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"><i class="fab fa-linkedin-in"></i></a></li>
+<li><a href="https://github.com/annaweronica?tab=repositories"><i class="fab fa-github"></i></a></li>
+<li><a href="https://www.meetup.com/members/276920213/"><i class="fab fa-meetup"></i></a></li>
+</ul>
 	</footer>
 </body>
 
