navbar in place, background color working

--- a/alltherest.html
+++ b/alltherest.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap:100,200,300,400,500,600,700"
 		rel="stylesheet">
 	<link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
-	<title>IT</title>
+	<title>All the rest</title>
 
 </head>
 
