--- a/index.html
+++ b/index.html
@@ -16,44 +16,67 @@
 </head>
 
 <body>
+	<!-- Navigation -->
 	<header>
-    <div class="container-fluid">
-    <div class="row">
-    
-			<a href="index.html">
-				<span class="active" id="logo">AJ</span>
-			</a>
-           
-			<ul id="header-menu">
-				<li>
-					<a class="active" href="it.html">IT</a>
-				</li>
-				<li>
-					<a class="active" href="hr.html">HR</a>
-				</li>
-				<li>
-					<a class="active" href="tv.html">TV</a>
-				</li>
-				<li>
-					<a class="active" href="about.html">About</a>
-				</li>
-			</ul>
-			<div id="background-image">
-            </div>
-             </div>
+		<nav class="navbar navbar-expand-lg static-top">
+			<div class="container">
+				<a class="navbar-brand" href="index.html">Anna Janiak</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+				<div class="collapse navbar-collapse" id="navbarResponsive">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="it.html">IT
+								<span class="sr-only">(current)</span>
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="agile.html">Agile</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="alltherest.html">All the rest</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
+					</ul>
+				</div>
 			</div>
+		</nav>
 	</header>
+	<!--<header>
+		<div class="container-fluid">
+			<div class="row">
+				<a href="index.html" class="col">
+					<span class="active" id="logo">Anna Janiak</span>
+				</a>
+				<ul class="nav justify-content-center">
+					<li class="nav-item">
+						<a class="nav-link active" href="#">IT</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Agile</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">All the rest</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link disabled" href="contact.html">Contact</a>
+					</li>
+				</ul>
+				<div id="background-image">
+				</div>
+			</div>
+		</div>
+	</header>-->
 	<div class="container-fluid">
-		<div class="row fullname">
-			<div class="col">
-				<h1>Anna Janiak</h1>
-			</div>
+	</div>
+	<div class="row jobtitile">
+		<div class="col-12">
+			<h1>FULL STACK DEVELOPER</h1>
 		</div>
-		<div class="row jobtitile">
-			<div class="col">
-				<h1>FULL STACK DEVELOPER</h1>
-			</div>
-		</div>
+	</div>
 	</div>
 
 	<footer class="footer">
