--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap:100,200,300,400,500,600,700"
 		rel="stylesheet">
 	<link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
-	<title>IT</title>
+	<title>Contact</title>
 
 </head>
 
 <body>
+	<header>
+   
+	</header>
+	
 
 	<footer class="footer">
 		<ul class="social-networks">
