main page structure done

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
         </button>
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
-						<li class="nav-item active">
+						<li class="nav-item active px-3">
 							<a class="nav-link" href="it.html">IT
 								<span class="sr-only">(current)</span>
 							</a>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item px-3">
 							<a class="nav-link" href="agile.html">Agile</a>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item px-3">
 							<a class="nav-link" href="alltherest.html">All the rest</a>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item px-3">
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
 					</ul>
@@ -45,49 +45,39 @@
 			</div>
 		</nav>
 	</header>
-	<!--<header>
+	<!-- content -->
+
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col">
+				<div class="landing-image"></div>
+			</div>
+		</div>
+		<!-- job titile -->
+		<div class="row jobtitle mt-15">
+			<div class="col-12">
+				<h1>FULL STACK DEVELOPER</h1>
+			</div>
+		</div>
+	</div>
+
+	<!--FOOTER-->
+	<footer class="footer fixed-bottom">
 		<div class="container-fluid">
 			<div class="row">
-				<a href="index.html" class="col">
-					<span class="active" id="logo">Anna Janiak</span>
-				</a>
-				<ul class="nav justify-content-center">
-					<li class="nav-item">
-						<a class="nav-link active" href="#">IT</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Agile</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">All the rest</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link disabled" href="contact.html">Contact</a>
-					</li>
-				</ul>
-				<div id="background-image">
+				<div class="col-12">
+					<ul class="social-networks">
+						<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"
+								target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+						<li><a href="https://github.com/annaweronica?tab=repositories"
+								target="_blank"><i class="fab fa-github"></i></a></li>
+						<li><a href="https://www.meetup.com/members/276920213/"
+								target="_blank"><i class="fab fa-meetup"></i></a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
-	</header>-->
-	<div class="container-fluid">
-	</div>
-	<div class="row jobtitile">
-		<div class="col-12">
-			<h1>FULL STACK DEVELOPER</h1>
-		</div>
-	</div>
-	</div>
-
-	<footer class="footer">
-		<ul class="social-networks">
-			<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"
-					target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-			<li><a href="https://github.com/annaweronica?tab=repositories"
-					target="_blank"><i class="fab fa-github"></i></a></li>
-			<li><a href="https://www.meetup.com/members/276920213/" target="_blank"><i class="fab fa-meetup"></i></a>
-			</li>
-		</ul>
 	</footer>
 </body>
 
