--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<!-- Navigation -->
+	<!-- NAVIGATION -->
 	<header>
 		<nav class="navbar navbar-expand-lg static-top">
 			<div class="container">
@@ -45,18 +45,18 @@
 			</div>
 		</nav>
 	</header>
-	<!-- content -->
-
+	
+    <!--CONTENT-->
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
 				<div class="landing-image"></div>
 			</div>
 		</div>
-		<!-- job titile -->
-		<div class="row jobtitle mt-15">
+		<!--JOB TITLE-->
+		<div class="row mt-5">
 			<div class="col-12">
-				<h1>FULL STACK DEVELOPER</h1>
+				<a class="jobtitle" href="it.html">I am Full Stack Developer</a>
 			</div>
 		</div>
 	</div>
