--- a/alltherest.html
+++ b/alltherest.html
@@ -16,16 +16,53 @@
 </head>
 
 <body>
-
-	<footer class="footer">
-		<ul class="social-networks">
-			<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"
-					target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-			<li><a href="https://github.com/annaweronica?tab=repositories"
-					target="_blank"><i class="fab fa-github"></i></a></li>
-			<li><a href="https://www.meetup.com/members/276920213/" target="_blank"><i class="fab fa-meetup"></i></a>
-			</li>
-		</ul>
+	<!-- NAVIGATION -->
+	<header>
+		<nav class="navbar navbar-expand-lg static-top">
+			<div class="container">
+				<a class="navbar-brand" href="index.html">Anna Janiak</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+				<div class="collapse navbar-collapse" id="navbarResponsive">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item active px-3">
+							<a class="nav-link" href="it.html">IT
+								<span class="sr-only">(current)</span>
+							</a>
+						</li>
+						<li class="nav-item px-3">
+							<a class="nav-link" href="agile.html">Agile</a>
+						</li>
+						<li class="nav-item px-3">
+							<a class="nav-link" href="alltherest.html">All the rest</a>
+						</li>
+						<li class="nav-item px-3">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+	
+	<!--FOOTER-->
+	<footer class="footer fixed-bottom">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-12">
+					<ul class="social-networks">
+						<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"
+								target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+						<li><a href="https://github.com/annaweronica?tab=repositories"
+								target="_blank"><i class="fab fa-github"></i></a></li>
+						<li><a href="https://www.meetup.com/members/276920213/"
+								target="_blank"><i class="fab fa-meetup"></i></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</footer>
 </body>
 
