--- a/agile.html
+++ b/agile.html
@@ -45,6 +45,14 @@
 			</div>
 		</nav>
 	</header>
+
+
+    <div class="container-fluid">
+		<div class="row">
+			<div class="col">
+				<div class="agile-image">agile</div>
+			</div>
+		</div>
 	
 	<!--FOOTER-->
 	<footer class="footer fixed-bottom">
