--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
 		integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap:100,200,300,400,500,600,700"
 		rel="stylesheet">
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+	<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 	<link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
 	<title>Contact</title>
 
@@ -48,7 +48,104 @@
 		</nav>
 	</header>
 	<!--CONTACT FORM-->
-	<div class="container contact-form">
+
+
+	<div class="contact-pageheader">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<div class="contact-caption">
+						<h1 class="contact-title">Don’t Be Shy, Talk to Me.</h1>
+						<!-- <p class="contact-text">Here is a few approaches to get in touch with me. It would be ideal if
+							you send an email, fill the contact form
+							<strong>I'm looking forward to speaking with you.</strong>
+						</p> -->
+					</div>
+				</div>
+				<div class="col-lg-offset-1 col-lg-5 col-md-offset-1 col-md-5 col-sm-12 col-xs-12">
+					<div class="contact-form">
+						<h3 class="contact-info-title">Contact Me</h3>
+						<div class="row">
+							<form>
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<div class="form-group">
+										<label class="control-label sr-only " for="Name"></label>
+										<input id="name" type="text" placeholder="Name" class="form-control" required>
+                                    </div>
+									</div>
+									<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+										<div class="form-group">
+											<label class="control-label sr-only " for="email"></label>
+											<input id="email" type="text" placeholder="Email" class="form-control" required>
+                                    </div>
+										</div>
+										<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+											<div class="form-group">
+												<label class="control-label sr-only " for="Phone"></label>
+												<input id="phone" type="text" placeholder="Phone" class="form-control" required>
+                                    </div>
+											</div>
+											<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+												<div class="form-group">
+													<label class="control-label required sr-only" for="select"></label>
+													<!-- <select class="form-control">
+                                            <option value="">What Are You Getting In Touch?</option>
+                                            <option value="">Relationship</option>
+                                            <option value="">Life Coaching</option>
+                                            <option value="">Leadership</option>
+                                            <option value="">Time Management</option>
+                                        </select> -->
+												</div>
+											</div>
+											<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mb20">
+												<div class="form-group">
+													<label class="control-label sr-only" for="textarea"></label>
+													<textarea class="form-control pdt20" id="textarea" name="textarea" rows="4" placeholder="Message"></textarea>
+												</div>
+											</div>
+											<div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
+												<button class="btn btn-primary btn-lg ">Send message</button>
+											</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="space-medium">
+		<div class="container">
+			<div class="row" >
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<hr>
+				</div>
+			</div>
+				<div class="col-lg-offset-1 col-lg-5 col-md-offset-1 col-md-5 col-sm-6 col-xs-12">
+					<div class="contact-section">
+						<div class="contact-icon"><i class="fa fa-map-marker"></i></div>
+						<div class="contact-info">
+							<p>Pargasgatan 34 Lgh 1201 <br> KISTA, Stockholm</p>
+						</div>
+					</div>
+					<div class="contact-section">
+						<div class="contact-icon"><i class="fa fa-phone"></i></div>
+						<div class="contact-info">
+							<p>+46 793360854</p>
+						</div>
+					</div>
+					<div class="contact-section">
+						<div class="contact-icon"><i class="fa fa-envelope"></i></div>
+						<div class="contact-info">
+							<p>anna.janiak@yahoo.com</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!--CONTACT FORM 2-->
+	<!--<div class="container contact-form">
 		<form method="post">
 			<h3>Drop Me a Message</h3>
 			<div class="row">
@@ -73,8 +170,10 @@
 								</div>
 							</div>
 		</form>
-	</div>
+	</div>-->
 
+
+	<!--CONTACT FORM 3-->
 	<!--<div class="jumbotron jumbotron-sm">
 		<div class="container">
 			<div class="row">
