--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 		<!--JOB TITLE-->
 		<div class="row mt-5">
-			<div class="col-12">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<a class="jobtitle" href="it.html">I am Full Stack Developer</a>
 			</div>
 		</div>
