--- a/it.html
+++ b/it.html
@@ -45,6 +45,13 @@
 			</div>
 		</nav>
 	</header>
+
+    <div class="container-fluid">
+		<div class="row">
+			<div class="col">
+				<div class="it-image"></div>
+			</div>
+		</div>
 	
 	<!--FOOTER-->
 	<footer class="footer fixed-bottom">
