--- a/agile.html
+++ b/agile.html
@@ -27,7 +27,7 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active px-3">
-							<a class="nav-link" href="it.html">IT
+							<a class="nav-link" href="tech.html">TECH
 								<span class="sr-only">(current)</span>
 							</a>
 						</li>
@@ -35,7 +35,7 @@
 							<a class="nav-link" href="agile.html">Agile</a>
 						</li>
 						<li class="nav-item px-3">
-							<a class="nav-link" href="alltherest.html">All the rest</a>
+							<a class="nav-link" href="softskills.html">Soft Skills</a>
 						</li>
 						<li class="nav-item px-3">
 							<a class="nav-link" href="contact.html">Contact</a>
@@ -50,7 +50,7 @@
     <div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<div class="agile-image">agile</div>
+				<div class="agile-image"></div>
 			</div>
 		</div>
 	
