--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active px-3">
-							<a class="nav-link" href="it.html">IT
+							<a class="nav-link" href="tech.html">TECH
 								<span class="sr-only">(current)</span>
 							</a>
 						</li>
@@ -37,7 +37,7 @@
 							<a class="nav-link" href="agile.html">Agile</a>
 						</li>
 						<li class="nav-item px-3">
-							<a class="nav-link" href="alltherest.html">All the rest</a>
+							<a class="nav-link" href="softskills.html">Soft Skills</a>
 						</li>
 						<li class="nav-item px-3">
 							<a class="nav-link" href="contact.html">Contact</a>
@@ -47,105 +47,15 @@
 			</div>
 		</nav>
 	</header>
+    <div class="container-fluid">
+		<div class="row">
+			<div class="col">
+				<div class="contact-image"></div>
+			</div>
+		</div>
 	<!--CONTACT FORM-->
 
-
-	<div class="contact-pageheader">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-					<div class="contact-caption">
-						<h1 class="contact-title">Don’t Be Shy, Talk to Me.</h1>
-						<!-- <p class="contact-text">Here is a few approaches to get in touch with me. It would be ideal if
-							you send an email, fill the contact form
-							<strong>I'm looking forward to speaking with you.</strong>
-						</p> -->
-					</div>
-				</div>
-				<div class="col-lg-offset-1 col-lg-5 col-md-offset-1 col-md-5 col-sm-12 col-xs-12">
-					<div class="contact-form">
-						<h3 class="contact-info-title">Contact Me</h3>
-						<div class="row">
-							<form>
-								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-									<div class="form-group">
-										<label class="control-label sr-only " for="Name"></label>
-										<input id="name" type="text" placeholder="Name" class="form-control" required>
-                                    </div>
-									</div>
-									<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-										<div class="form-group">
-											<label class="control-label sr-only " for="email"></label>
-											<input id="email" type="text" placeholder="Email" class="form-control" required>
-                                    </div>
-										</div>
-										<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-											<div class="form-group">
-												<label class="control-label sr-only " for="Phone"></label>
-												<input id="phone" type="text" placeholder="Phone" class="form-control" required>
-                                    </div>
-											</div>
-											<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-												<div class="form-group">
-													<label class="control-label required sr-only" for="select"></label>
-													<!-- <select class="form-control">
-                                            <option value="">What Are You Getting In Touch?</option>
-                                            <option value="">Relationship</option>
-                                            <option value="">Life Coaching</option>
-                                            <option value="">Leadership</option>
-                                            <option value="">Time Management</option>
-                                        </select> -->
-												</div>
-											</div>
-											<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mb20">
-												<div class="form-group">
-													<label class="control-label sr-only" for="textarea"></label>
-													<textarea class="form-control pdt20" id="textarea" name="textarea" rows="4" placeholder="Message"></textarea>
-												</div>
-											</div>
-											<div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
-												<button class="btn btn-primary btn-lg ">Send message</button>
-											</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="space-medium">
-		<div class="container">
-			<div class="row" >
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<hr>
-				</div>
-			</div>
-				<div class="col-lg-offset-1 col-lg-5 col-md-offset-1 col-md-5 col-sm-6 col-xs-12">
-					<div class="contact-section">
-						<div class="contact-icon"><i class="fa fa-map-marker"></i></div>
-						<div class="contact-info">
-							<p>Pargasgatan 34 Lgh 1201 <br> KISTA, Stockholm</p>
-						</div>
-					</div>
-					<div class="contact-section">
-						<div class="contact-icon"><i class="fa fa-phone"></i></div>
-						<div class="contact-info">
-							<p>+46 793360854</p>
-						</div>
-					</div>
-					<div class="contact-section">
-						<div class="contact-icon"><i class="fa fa-envelope"></i></div>
-						<div class="contact-info">
-							<p>anna.janiak@yahoo.com</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!--CONTACT FORM 2-->
-	<!--<div class="container contact-form">
+	<div class="container contact-form">
 		<form method="post">
 			<h3>Drop Me a Message</h3>
 			<div class="row">
@@ -170,87 +80,7 @@
 								</div>
 							</div>
 		</form>
-	</div>-->
-
-
-	<!--CONTACT FORM 3-->
-	<!--<div class="jumbotron jumbotron-sm">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 col-lg-12">
-					<h1 class="h1">
-						 Let's talk <small>Let's talk</small></h1> 
-				</div>
-			</div>
-		</div>
 	</div>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8">
-				<div class="well well-sm">
-					<form>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-									<label for="name">
-                                Name</label>
-									<input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
-                        </div>
-									<div class="form-group">
-										<label for="email">
-                                Email Address</label>
-										<div class="input-group">
-											<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
-											</span>
-											<input type="email" class="form-control" id="email" placeholder="Enter email" required="required" /></div>
-										</div>
-										<div class="form-group">
-											<label for="subject">
-                                Subject</label>
-											<select id="subject" name="subject" class="form-control" required="required">
-                                <option value="na" selected="">Choose One:</option>
-                                <option value="service">General Customer Service</option>
-                                <option value="suggestions">Suggestions</option>
-                                <option value="product">Product Support</option>
-                            </select>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group">
-											<label for="name">
-                                Message</label>
-											<textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
-                                placeholder="Message"></textarea>
-										</div>
-									</div>
-									<div class="col-md-12">
-										<button type="submit" class="btn btn-primary pull-right" id="btnContactUs">
-                            Send Me Message</button>
-									</div>
-								</div>
-					</form>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<form>
-					<legend><span class="glyphicon glyphicon-globe"></span> Our office</legend>
-					<address>
-						<strong>Anna Janiak</strong><br>
-                Pargasgatan 34 Lgh 1201<br>
-                16471 Kista, Stockholm<br>
-						<abbr title="Phone">
-                    P:</abbr>
-						0793360854
-					</address>
-					<address>
-						<strong>Full Name</strong><br>
-						<a href="mailto:#">first.last@example.com</a>
-					</address>
-				</form>
-			</div>
-		</div>
-	</div>-->
-
 
 	<!--FOOTER-->
 	<footer class="footer fixed-bottom">
