--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active px-3">
-							<a class="nav-link" href="it.html">IT
+							<a class="nav-link" href="tech.html">TECH
 								<span class="sr-only">(current)</span>
 							</a>
 						</li>
@@ -35,7 +35,7 @@
 							<a class="nav-link" href="agile.html">Agile</a>
 						</li>
 						<li class="nav-item px-3">
-							<a class="nav-link" href="alltherest.html">All the rest</a>
+							<a class="nav-link" href="softskills.html">Soft Skills</a>
 						</li>
 						<li class="nav-item px-3">
 							<a class="nav-link" href="contact.html">Contact</a>
@@ -56,8 +56,11 @@
 		<!--JOB TITLE-->
 		<div class="row mt-5">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<a class="jobtitle" href="it.html">I am Full Stack Developer</a>
+				<a class="jobtitle" href="tech.html">I am Full Stack Developer</a>
 			</div>
+            <div class="row mt-5">
+            <button type="button" class="btn btn-outline-secondary">Hire Me</button>
+            </div>
 		</div>
 	</div>
 
