--- a/tech.html
+++ b/tech.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap:100,200,300,400,500,600,700"
 		rel="stylesheet">
 	<link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
-	<title>IT</title>
+	<title>TECH</title>
 
 </head>
 
@@ -27,7 +27,7 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active px-3">
-							<a class="nav-link" href="it.html">IT
+							<a class="nav-link" href="tech.html">TECH
 								<span class="sr-only">(current)</span>
 							</a>
 						</li>
@@ -35,7 +35,7 @@
 							<a class="nav-link" href="agile.html">Agile</a>
 						</li>
 						<li class="nav-item px-3">
-							<a class="nav-link" href="alltherest.html">All the rest</a>
+							<a class="nav-link" href="softskills.html">Soft Skills</a>
 						</li>
 						<li class="nav-item px-3">
 							<a class="nav-link" href="contact.html">Contact</a>
@@ -49,7 +49,7 @@
     <div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<div class="it-image"></div>
+				<div class="tech-image"></div>
 			</div>
 		</div>
 	
