--- a/contact.html
+++ b/contact.html
@@ -47,42 +47,69 @@
 			</div>
 		</nav>
 	</header>
-    <div class="container-fluid">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
 				<div class="contact-image"></div>
 			</div>
 		</div>
-	<!--CONTACT FORM-->
+		<!--CONTACT FORM-->
 
-	<div class="container contact-form">
-		<form method="post">
-			<h3>Drop Me a Message</h3>
-			<div class="row">
-				<div class="col-md-6">
-					<div class="form-group">
-						<input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" />
-                        </div>
+		<div class="container contact-form">
+			<form method="post">
+				<h3>Drop Me a Message</h3>
+				<div class="row">
+					<div class="col-md-6">
 						<div class="form-group">
-							<input type="text" name="txtEmail" class="form-control" placeholder="Your Email *" value="" />
+							<input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" />
                         </div>
 							<div class="form-group">
-								<input type="text" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" />
+								<input type="text" name="txtEmail" class="form-control" placeholder="Your Email *" value="" />
                         </div>
 								<div class="form-group">
-									<input type="submit" name="btnSubmit" class="btnContact" value="Send Message" />
+									<input type="text" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" />
                         </div>
-								</div>
-								<div class="col-md-6">
 									<div class="form-group">
-										<textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
+										<input type="submit" name="btnSubmit" class="btnContact" value="Send Message" />
+                        </div>
+									</div>
+									<div class="col-md-6">
+										<div class="form-group">
+											<textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
+										</div>
 									</div>
 								</div>
-							</div>
-		</form>
-	</div>
+			</form>
+		</div>
+		<!--FOOTER -->
 
-	<!--FOOTER-->
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-4">
+					<div class="address">
+						<p>Pargasgatan 34 Lgh 1201<br>16471 KISTA, STOCKHOLM</p>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="download">
+						<p>Download CV.pdf here</p>
+					</div>
+				</div>
+                <div class="col-4">
+					<ul class="social-networks">
+						<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"
+								target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+						<li><a href="https://github.com/annaweronica?tab=repositories"
+								target="_blank"><i class="fab fa-github"></i></a></li>
+						<li><a href="https://www.meetup.com/members/276920213/"
+								target="_blank"><i class="fab fa-meetup"></i></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<!--FOOTER 2
 	<footer class="footer fixed-bottom">
 		<div class="container-fluid">
 			<div class="row">
@@ -99,7 +126,7 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+	</footer>-->
 </body>
 
 </html>
