--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 			</div>
 		</nav>
 	</header>
-	
-    <!--CONTENT-->
+
+	<!--CONTENT-->
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
@@ -58,13 +58,43 @@
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<a class="jobtitle" href="tech.html">I am Full Stack Developer</a>
 			</div>
-            <div class="row mt-5">
-            <button type="button" class="btn btn-outline-secondary">Hire Me</button>
-            </div>
+			<div class="row mt-5">
+				<button type="button" class="btn btn-outline-secondary">Hire Me</button>
+			</div>
 		</div>
 	</div>
 
 	<!--FOOTER-->
+
+	<div class="container-fluid">
+		<div class="row footer">
+			<div class="col-4">
+				<div class="address">
+					<p>Pargasgatan 34 Lgh 1201<br>16471 KISTA, STOCKHOLM</p>
+				</div>
+			</div>
+
+			<div class="col-4">
+				<ul class="social-networks">
+					<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"
+							target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+					<li><a href="https://github.com/annaweronica?tab=repositories"
+							target="_blank"><i class="fab fa-github"></i></a></li>
+					<li><a href="https://www.meetup.com/members/276920213/"
+							target="_blank"><i class="fab fa-meetup"></i></a>
+					</li>
+				</ul>
+			</div>
+			<div class="col-4">
+				<div class="download">
+                <p>Download CV.pdf</p>
+					<a href="./assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> <i class="fas fa-download"></i></a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!--FOOTER 2
 	<footer class="footer fixed-bottom">
 		<div class="container-fluid">
 			<div class="row">
@@ -81,7 +111,7 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+	</footer>-->
 </body>
 
 </html>
