most content added

--- a/agile.html
+++ b/agile.html
@@ -46,14 +46,40 @@
 		</nav>
 	</header>
 
-
-    <div class="container-fluid">
+	<!--Image-->
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<div class="agile-image"></div>
+				<div class="agile-image image"></div>
 			</div>
 		</div>
-	
+
+		<!--Metodologies-->
+
+		<div class="row">
+			<div class="col-4">
+				<h3>SCRUM</h3>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem ipsam nulla, magni veniam iure,
+					magnam consequuntur, dicta rerum temporibus laborum perspiciatis amet explicabo fugit esse.
+					Voluptatibus, harum perspiciatis! Eligendi, doloribus!</p>
+                    <a href="https://www.scrum.org/" type="button" class="btn btn-outline-secondary" target="_blank">Read More</a> 
+			</div>
+			<div class="col-4">
+			<h3>KANBAN</h3>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quam ab fuga repudiandae, qui, suscipit
+				aperiam enim corrupti laboriosam accusamus exercitationem? Aut laborum voluptas aliquid similique minima
+				delectus maxime odio.</p>
+                <a href="https://www.scrum.org/resources/kanban-guide-scrum-teams" type="button" class="btn btn-outline-secondary" target="_blank">Read More</a> 
+		</div>
+		<div class="col-4">
+			<h3>SAFe</h3>
+			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus inventore, saepe veritatis alias nihil
+				excepturi ullam nostrum rerum quam sint, est dignissimos eum perferendis earum perspiciatis obcaecati
+				eius quod natus!</p>
+                <a href="https://www.scaledagileframework.com/" type="button" class="btn btn-outline-secondary" target="_blank">Read More</a> 
+		</div>
+	</div>
+
 	<!--FOOTER-->
 	<footer class="footer fixed-bottom">
 		<div class="container-fluid">
