--- a/contact.html
+++ b/contact.html
@@ -50,14 +50,14 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<div class="contact-image"></div>
+				<div class="contact-image image"></div>
 			</div>
 		</div>
 		<!--CONTACT FORM-->
 
 		<div class="container contact-form">
 			<form method="post">
-				<h3>Drop Me a Message</h3>
+			
 				<div class="row">
 					<div class="col-md-6">
 						<div class="form-group">
