--- a/softskills.html
+++ b/softskills.html
@@ -50,7 +50,7 @@
     <div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<div class="softskills-image"></div>
+				<div class="softskills-image image"></div>
 			</div>
 		</div>
 	
