--- a/index.html
+++ b/index.html
@@ -49,18 +49,20 @@
 	<!--CONTENT-->
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col">
-				<div class="landing-image"></div>
+			<div class="col-10">
+				<div class="landing-image image"></div>
 			</div>
 		</div>
 		<!--JOB TITLE-->
 		<div class="row mt-5">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<div class="col-lg-10 col-md-6 col-sm-4 col-xs-2">
 				<a class="jobtitle" href="tech.html">I am Full Stack Developer</a>
 			</div>
 			<div class="row mt-5">
-				<button type="button" class="btn btn-outline-secondary">Hire Me</button>
-			</div>
+             <a href="contact.html" type="button" class="btn btn-outline-secondary">Hire Me</a> 
+				<!-- <button type="button" class="btn btn-outline-secondary">Hire Me</button> -->
+         
+            </div>
 		</div>
 	</div>
 
