--- a/tech.html
+++ b/tech.html
@@ -46,31 +46,106 @@
 		</nav>
 	</header>
 
-    <div class="container-fluid">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<div class="tech-image"></div>
+				<div class="tech-image image"></div>
 			</div>
 		</div>
-	
-	<!--FOOTER-->
-	<footer class="footer fixed-bottom">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-12">
-					<ul class="social-networks">
-						<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"
-								target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-						<li><a href="https://github.com/annaweronica?tab=repositories"
-								target="_blank"><i class="fab fa-github"></i></a></li>
-						<li><a href="https://www.meetup.com/members/276920213/"
-								target="_blank"><i class="fab fa-meetup"></i></a>
-						</li>
-					</ul>
+
+		<!--Front and Back End description-->
+		<div class="row">
+			<div class="col">
+				<h3>Front End</h3>
+				<p>A front-end web developer is responsible for implementing visual elements that users see and interact
+					with in a web application.</p>
+			</div>
+			<div class="col">
+				<h3>Back End</h3>
+				<p>AA back-end web developer is responsible for server-side web application logic and integration of the
+					work front-end web developers do. Back-end developers usually write web services and APIs used by
+					front-end developers and mobile application developers.</p>
+			</div>
+
+        <div class="col">
+				<h3>Testing</h3>
+				<p>AA back-end web developer is responsible for server-side web application logic and integration of the
+					work front-end web developers do. Back-end developers usually write web services and APIs used by
+					front-end developers and mobile application developers.</p>
+			</div>
+		</div>
+
+		<!--PROGRESS SKILLS-->
+		<div class="row">
+			<div class="col">
+				<div class="progress">
+					<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+						aria-valuemin="0" aria-valuemax="100" style="width:50%">
+						50% Complete (success)
+					</div>
+					<span class="progress-type">HTML/HTML5</span>
 				</div>
-			</div>
-		</div>
-	</footer>
+				<div class="progress">
+					<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+						aria-valuemax="100" style="width:40%">
+						40% Complete (info)
+					</div>
+					<span class="progress-type">CSS/CSS3</span>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60"
+						aria-valuemin="0" aria-valuemax="100" style="width:10%">
+						10% Complete (warning)
+					</div>
+					<span class="progress-type">JS/React</span>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
+						aria-valuemin="0" aria-valuemax="100" style="width:20%">
+						20% Complete (danger)
+					</div>
+					<span class="progress-type">TypeScript</span>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
+						aria-valuemin="0" aria-valuemax="100" style="width:10%">
+						10% Complete (danger)
+					</div>
+					<span class="progress-type">Java</span>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
+						aria-valuemin="0" aria-valuemax="100" style="width:5%">
+						5% Complete (danger)
+					</div>
+					<span class="progress-type">Python/Django</span>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
+						aria-valuemin="0" aria-valuemax="100" style="width:20%">
+						20% Complete (danger)
+					</div>
+					<span class="progress-type">SQL</span>
+				</div>
+
+				<!--FOOTER-->
+				<footer class="footer fixed-bottom">
+					<div class="container-fluid">
+						<div class="row">
+							<div class="col-12">
+								<ul class="social-networks">
+									<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"
+											target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+									<li><a href="https://github.com/annaweronica?tab=repositories"
+											target="_blank"><i class="fab fa-github"></i></a></li>
+									<li><a href="https://www.meetup.com/members/276920213/"
+											target="_blank"><i class="fab fa-meetup"></i></a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</footer>
 </body>
 
 </html>
