working on footer

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 
 		<div class="container contact-form">
 			<form method="post">
-			
+
 				<div class="row">
 					<div class="col-md-6">
 						<div class="form-group">
@@ -82,51 +82,9 @@
 			</form>
 		</div>
 		<!--FOOTER -->
+		<footer class="footer fixed-bottom">
 
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-4">
-					<div class="address">
-						<p>Pargasgatan 34 Lgh 1201<br>16471 KISTA, STOCKHOLM</p>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="download">
-						<p>Download CV.pdf here</p>
-					</div>
-				</div>
-                <div class="col-4">
-					<ul class="social-networks">
-						<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"
-								target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-						<li><a href="https://github.com/annaweronica?tab=repositories"
-								target="_blank"><i class="fab fa-github"></i></a></li>
-						<li><a href="https://www.meetup.com/members/276920213/"
-								target="_blank"><i class="fab fa-meetup"></i></a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-
-		<!--FOOTER 2
-	<footer class="footer fixed-bottom">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-12">
-					<ul class="social-networks">
-						<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"
-								target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-						<li><a href="https://github.com/annaweronica?tab=repositories"
-								target="_blank"><i class="fab fa-github"></i></a></li>
-						<li><a href="https://www.meetup.com/members/276920213/"
-								target="_blank"><i class="fab fa-meetup"></i></a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</footer>-->
+		</footer>
 </body>
 
 </html>
