--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	<!-- NAVIGATION -->
 	<header>
 		<nav class="navbar navbar-expand-lg static-top">
-			<div class="container">
+			<div class="container-fluid">
 				<a class="navbar-brand" href="index.html">Anna Janiak</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+				<!--	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button>-->
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active px-3">
@@ -49,59 +49,37 @@
 	<!--CONTENT-->
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-10">
+			<div class="col-lg-10">
 				<div class="landing-image image"></div>
 			</div>
 		</div>
+
 		<!--JOB TITLE-->
 		<div class="row mt-5">
-			<div class="col-lg-10 col-md-6 col-sm-4 col-xs-2">
+			<div class="col-lg-10">
 				<a class="jobtitle" href="tech.html">I am Full Stack Developer</a>
 			</div>
-			<div class="row mt-5">
-             <a href="contact.html" type="button" class="btn btn-outline-secondary">Hire Me</a> 
-				<!-- <button type="button" class="btn btn-outline-secondary">Hire Me</button> -->
-         
-            </div>
+		</div>
+
+		<!--Hire Me button-->
+		<div class="row mt-5">
+			<div class="col-lg-10 hire-me">
+				<button type="button" class="btn btn-secondary"><a href="contact.html">Hire Me</a></button>
+			</div>
 		</div>
 	</div>
 
 	<!--FOOTER-->
-
-	<div class="container-fluid">
-		<div class="row footer">
-			<div class="col-4">
-				<div class="address">
-					<p>Pargasgatan 34 Lgh 1201<br>16471 KISTA, STOCKHOLM</p>
-				</div>
-			</div>
-
-			<div class="col-4">
-				<ul class="social-networks">
-					<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"
-							target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-					<li><a href="https://github.com/annaweronica?tab=repositories"
-							target="_blank"><i class="fab fa-github"></i></a></li>
-					<li><a href="https://www.meetup.com/members/276920213/"
-							target="_blank"><i class="fab fa-meetup"></i></a>
-					</li>
-				</ul>
-			</div>
-			<div class="col-4">
-				<div class="download">
-                <p>Download CV.pdf</p>
-					<a href="./assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> <i class="fas fa-download"></i></a>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!--FOOTER 2
 	<footer class="footer fixed-bottom">
 		<div class="container-fluid">
-			<div class="row">
-				<div class="col-12">
-					<ul class="social-networks">
+			<div class="row ">
+				<div class="col-4">
+					<div class="address footer-item">
+						<p>Pargasgatan 34 Lgh 1201<br>16471 KISTA, STOCKHOLM</p>
+					</div>
+				</div>
+				<div class="col-4">
+					<ul class="social-networks footer-item">
 						<li><a href="https://www.linkedin.com/in/anna-j-605a40177/"
 								target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
 						<li><a href="https://github.com/annaweronica?tab=repositories"
@@ -111,9 +89,16 @@
 						</li>
 					</ul>
 				</div>
+				<div class="col-4">
+					<div class="download footer-item">
+						<p>Download CV.pdf</p>
+						<a href="./assets/cv/cvAnnaJaniakJansson.pdf" target="_blank">
+							<i class="fas fa-download"></i></a>
+					</div>
+				</div>
 			</div>
 		</div>
-	</footer>-->
+	</footer>
 </body>
 
 </html>
