landing-image changed

--- a/index.html
+++ b/index.html
@@ -50,57 +50,55 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 landing-image image">
-
 			</div>
 		</div>
 
 		<!--JOB TITLE-->
 		<div class="row mt-5" id="landing-content">
-			<div class="col-lg jobtitle">
+			<!-- <div class="col-lg jobtitle">
 				<a href="tech.html">I am Full Stack Developer</a>
+			</div> -->
+			<!-- </div> -->
+			<div class="typewriter">
+				<h1> I am full stack developer.</h1>
 			</div>
 		</div>
-	</div>
 
-	<!--FOOTER-->
-	<footer class="footer">
-		<!-- <footer class="footer fixed-bottom"> -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm">
-					<div class="address footer-item">
-						<a href="contact.html">Pargasgatan 34 Lgh 1201 <i class="fas fa-home"></i>
-							<br>16471 Kista, Stockholm</a>
-					</div>
-				</div>
-				<div class="col-sm">
-					<ul class="social-networks footer-item">
-						<li>
-							<a href="https://www.linkedin.com/in/anna-j-605a40177/"
-								target="_blank"><i class="fab fa-linkedin-in"></i>
-							</a>
-						</li>
-						<li>
-							<a href="https://github.com/annaweronica?tab=repositories"
-								target="_blank"><i class="fab fa-github"></i>
-							</a>
-						</li>
-						<li>
-							<a href="https://www.meetup.com/members/276920213/"
-								target="_blank"><i class="fab fa-meetup"></i>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<div class="col-sm">
-					<div class="download footer-item">
-						<p>Download CV.pdf</p>
-						<a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank">
-							<i class="fas fa-download"></i></a>
+		<!--FOOTER-->
+		<footer class="footer">
+			<!-- <footer class="footer fixed-bottom"> -->
+			<div class="container">
+				<div class="row">
+					<div class="col-sm">
+						<ul class="social-networks">
+							<li>
+								<a href="contact.html"><i class="fas fa-home"></i></a>
+							</li>
+							<li>
+								<a href="https://www.linkedin.com/in/anna-j-605a40177/"
+									target="_blank"><i class="fab fa-linkedin-in"></i>
+								</a>
+							</li>
+							<li>
+								<a href="https://github.com/annaweronica?tab=repositories"
+									target="_blank"><i class="fab fa-github"></i>
+								</a>
+							</li>
+							<li>
+								<a href="https://www.meetup.com/members/276920213/"
+									target="_blank"><i class="fab fa-meetup"></i>
+								</a>
+							</li>
+							<li>
+								<a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank">
+									<i class="fas fa-download"></i>
+								</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
-		</div>
+	</div>
 	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
