--- a/index.html
+++ b/index.html
@@ -17,88 +17,91 @@
 <body>
 	<!-- NAVIGATION -->
 	<header>
-		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
-			<a class="navbar-brand" href="index.html">Anna Janiak</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
+		<div class="container-fluid">
+			<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
+				<a class="navbar-brand" href="index.html">Anna Janiak</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="tech.html">TECH
-							<span class="sr-only">(current)</span>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="agile.html">Agile</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="softskills.html">Soft Skills</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
+				<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="tech.html">TECH
+								<span class="sr-only">(current)</span>
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="agile.html">Agile</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="softskills.html">Soft Skills</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</div>
 	</header>
 
 	<!--CONTENT-->
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col-lg-12 landing-image image">
 			</div>
 		</div>
 
-		<!--JOB TITLE-->
-		<div class="row mt-5" id="landing-content">
-			<!-- <div class="col-lg jobtitle">
-				<a href="tech.html">I am Full Stack Developer</a>
-			</div> -->
-			<!-- </div> -->
-			<div class="typewriter">
-				<h1> I am full stack developer.</h1>
+		<!--TYPEWRITER-->
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="typewriter" id="landing-content">
+					<h1>I am creative. I am stubborn. I am full stack developer.</h1>
+				</div>
 			</div>
 		</div>
+	</div>
 
-		<!--FOOTER-->
-		<footer class="footer">
-			<!-- <footer class="footer fixed-bottom"> -->
-			<div class="container">
-				<div class="row">
-					<div class="col-sm">
-						<ul class="social-networks">
-							<li>
-								<a href="contact.html"><i class="fas fa-home"></i></a>
-							</li>
-							<li>
-								<a href="https://www.linkedin.com/in/anna-j-605a40177/"
-									target="_blank"><i class="fab fa-linkedin-in"></i>
-								</a>
-							</li>
-							<li>
-								<a href="https://github.com/annaweronica?tab=repositories"
-									target="_blank"><i class="fab fa-github"></i>
-								</a>
-							</li>
-							<li>
-								<a href="https://www.meetup.com/members/276920213/"
-									target="_blank"><i class="fab fa-meetup"></i>
-								</a>
-							</li>
-							<li>
-								<a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank">
-									<i class="fas fa-download"></i>
-								</a>
-							</li>
-						</ul>
+	<!--FOOTER-->
+	<footer class="footer">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm">
+					<div class="phone-number footer-item">
+						<a href="contact.html">0 793360854 <i class="fas fa-phone"></i>
+						</a>
+					</div>
+				</div>
+				<div class="col-sm">
+					<ul class="social-networks footer-item">
+						<li>
+							<a href="https://www.linkedin.com/in/anna-j-605a40177/"
+								target="_blank"><i class="fab fa-linkedin-in"></i>
+							</a>
+						</li>
+						<li>
+							<a href="https://github.com/annaweronica?tab=repositories"
+								target="_blank"><i class="fab fa-github"></i>
+							</a>
+						</li>
+						<li>
+							<a href="https://www.meetup.com/members/276920213/"
+								target="_blank"><i class="fab fa-meetup"></i>
+							</a>
+						</li>
+					</ul>
+				</div>
+				<div class="col-sm">
+					<div class="download footer-item">
+						<p>Download CV.pdf</p>
+						<a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank">
+							<i class="fas fa-download"></i></a>
 					</div>
 				</div>
 			</div>
-	</div>
+		</div>
 	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
