working on responsiveness

--- a/contact.html
+++ b/contact.html
@@ -84,9 +84,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm">
-					<div class="address footer-item">
-						<a href="contact.html">Pargasgatan 34 Lgh 1201 <i class="fas fa-home"></i>
-							<br>16471 Kista, Stockholm</a>
+					<div class="phone-number footer-item">
+						<a href="contact.html">0 793360854 <i class="fas fa-phone"></i>
+						</a>
 					</div>
 				</div>
 				<div class="col-sm">
