--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 	<footer class="footer">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm">
+				<div class="col-sm-4">
 					<div class="phone-number footer-item">
 						<a href="contact.html">0 793360854 <i class="fas fa-phone"></i>
 						</a>
 					</div>
 				</div>
-				<div class="col-sm">
+				<div class="col-sm-4">
 					<ul class="social-networks footer-item">
 						<li>
 							<a href="https://www.linkedin.com/in/anna-j-605a40177/"
@@ -93,7 +93,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="col-sm">
+				<div class="col-sm-4">
 					<div class="download footer-item">
 						<p>Download CV.pdf</p>
 						<a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank">
