--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 	<!--CONTENT-->
 	<div class="container-fluid content">
 		<div class="row">
-			<div class="col-lg-12 landing-image image">
-			</div>
+			<div class="col-lg-6 landing-image image"></div>
+			<div class="col-lg-6"></div>
 		</div>
 
 		<!--TYPEWRITER-->
@@ -69,12 +69,12 @@
 			</div>
 			</div> -->
 
-			<!--FOOTER-->
-			<footer class="footer">
-				<div class="container-fluid">
-					<div class="row">
+	<!--FOOTER-->
+	<footer class="footer">
+		<div class="container-fluid">
+			<span>
+					<!-- <div class="row">
 						<div class="col-sm-4">
-							<!-- <div class="phone-number footer-item"> -->
 							<div class="footer-item">
 								<a href="contact.html">0 793360854 <i class="fas fa-phone"></i>
 								</a>
@@ -101,12 +101,12 @@
 						</div>
 						<div class="col-sm-4">
 							<div class="footer-item">
-								<!-- <p></p> -->
 								<a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank">
 									Download CV.pdf <i class="fas fa-download"></i></a>
 							</div>
 						</div>
-					</div>
+					</div> -->
+                    <span>
 				</div>
 			</footer>
 
